--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+
 .closeBar {
     background-image: url("./assets/images/home back.jpg");
     -webkit-background-size: cover;
@@ -242,6 +243,9 @@
     font-family: 'Brush Script MT';
     text-align: end;
 }
+.footer span {
+    margin-right: 1.3rem;
+}
 
 @media screen and (max-width: 992px){
     .closeBar{
@@ -297,6 +301,7 @@
     .sirVis, .kolicina {
         margin-top: 1.2em;
         text-align: center;
+        padding-left: 0;
     }
     .sirVis input::placeholder, .kolicina input::placeholder {
         font-style: italic;
@@ -311,6 +316,9 @@
         width: 7em;
         margin-left: 1.5em;
         margin-right: 1.5em;
+    }
+    .sirVis input[type=number]{
+        margin-bottom: 0.5rem;
     }
     .deoForme {
         border: none;
